--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ env:
 before_install:
   - go get github.com/mitchellh/gox
   - go get github.com/tcnksm/ghr
+  - go get github.com/pkg/errors
 install:
   - gox -osarch="linux/amd64" -osarch="windows/amd64" -output "dist/{{.OS}}_{{.Arch}}_{{.Dir}}_$TRAVIS_BRANCH"
 deploy:
