chore: fix readme release-please update

--- a/.github/release-please/config.json
+++ b/.github/release-please/config.json
@@ -51,13 +51,14 @@
     }
   ],
   "include-component-in-tag": false,
+
   "packages": {
     ".": {
       "release-type": "simple",
       "include-v-in-tag": true,
       "package-name": "jbinary",
       "extra-files": [
-        "readme.md"
+        "Readme.md"
       ]
     }
   },
